; ModuleID = '/home/carl/AnghaBench/linux/drivers/mtd/nand/raw/extr_mpc5121_nfc.c_mpc5121_nfc_send_read_page.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mtd/nand/raw/extr_mpc5121_nfc.c_mpc5121_nfc_send_read_page.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mtd_info = type { i32 }

@NFC_BUF_ADDR = common dso_local global i32 0, align 4
@NFC_RBA_MASK = common dso_local global i32 0, align 4
@NFC_CONFIG2 = common dso_local global i32 0, align 4
@NFC_OUTPUT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mtd_info*)* @mpc5121_nfc_send_read_page to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mpc5121_nfc_send_read_page(%struct.mtd_info* %0) #0 {
  %2 = alloca %struct.mtd_info*, align 8
  store %struct.mtd_info* %0, %struct.mtd_info** %2, align 8
  %3 = load %struct.mtd_info*, %struct.mtd_info** %2, align 8
  %4 = load i32, i32* @NFC_BUF_ADDR, align 4
  %5 = load i32, i32* @NFC_RBA_MASK, align 4
  %6 = call i32 @nfc_clear(%struct.mtd_info* %3, i32 %4, i32 %5)
  %7 = load %struct.mtd_info*, %struct.mtd_info** %2, align 8
  %8 = load i32, i32* @NFC_CONFIG2, align 4
  %9 = load i32, i32* @NFC_OUTPUT, align 4
  %10 = call i32 @nfc_write(%struct.mtd_info* %7, i32 %8, i32 %9)
  %11 = load %struct.mtd_info*, %struct.mtd_info** %2, align 8
  %12 = call i32 @mpc5121_nfc_done(%struct.mtd_info* %11)
  ret void
}

declare dso_local i32 @nfc_clear(%struct.mtd_info*, i32, i32) #1

declare dso_local i32 @nfc_write(%struct.mtd_info*, i32, i32) #1

declare dso_local i32 @mpc5121_nfc_done(%struct.mtd_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
